updated front page feed from twitter to facebook because twitter stopped working; fixed cropping issue on feedback form

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -65,4 +65,11 @@ footer {
     padding: $alert-padding;
   }
 }
+/* google form mobile */
+@media screen and (max-width: 767px) {
+  iframe[src*="google.com/forms"] {
+    width: 100% !important;
+    height: 800px;
+  }
+}
 @import "hydeout";
